force-app/main/default/objects/Document__c/fields/Calendar_Event__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Calendar Event</label>
    <referenceTo>Calendar_Event__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>