force-app/main/default/objects/Document__c/fields/Matter__c.field-meta.xml
<CustomField>
    <fullName>Matter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The relationship between Matters and Documents is one-to-many. Each legal case (Matter) can have a multitude of documents associated with it, including pleadings, evidence, correspondence, and other relevant materials. A Document typically pertains to a specific Matter, providing a clear organizational structure for case-related files. This relationship highlights the document-intensive nature of legal practice and the critical need to organize these documents according to the respective case they belong to. Every legal case generates a significant volume of documentation that requires systematic storage and easy retrieval.</description>
    <label>Matter</label>
    <referenceTo>Matter__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>